LAB2_Game/.metadata/.plugins/org.eclipse.cdt.ui/LAB3_Game.build.log
02:52:01 **** Incremental Build of configuration Debug for project LAB3_Game ****
make -j16 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G474xx -c -I../Core/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc -I../Drivers/STM32G4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:109:3: warning: implicit declaration of function 'SPITxRx_Setup' [-Wimplicit-function-declaration]
  109 |   SPITxRx_Setup();
      |   ^~~~~~~~~~~~~
../Core/Src/main.c:110:3: warning: implicit declaration of function 'TikTokGame' [-Wimplicit-function-declaration]
  110 |   TikTokGame();
      |   ^~~~~~~~~~
../Core/Src/main.c:111:3: warning: implicit declaration of function 'LEDdisplay' [-Wimplicit-function-declaration]
  111 |   LEDdisplay()
      |   ^~~~~~~~~~
../Core/Src/main.c:111:15: error: expected ';' before 'while'
  111 |   LEDdisplay()
      |               ^
      |               ;
......
  116 |   while (1)
      |   ~~~~~        
../Core/Src/main.c: At top level:
../Core/Src/main.c:360:6: warning: conflicting types for 'SPITxRx_Setup'; have 'void()'
  360 | void SPITxRx_Setup()
      |      ^~~~~~~~~~~~~
../Core/Src/main.c:109:3: note: previous implicit declaration of 'SPITxRx_Setup' with type 'void()'
  109 |   SPITxRx_Setup();
      |   ^~~~~~~~~~~~~
../Core/Src/main.c:382:6: warning: conflicting types for 'TikTokGame'; have 'void()'
  382 | void TikTokGame()
      |      ^~~~~~~~~~
../Core/Src/main.c:110:3: note: previous implicit declaration of 'TikTokGame' with type 'void()'
  110 |   TikTokGame();
      |   ^~~~~~~~~~
../Core/Src/main.c:537:6: warning: conflicting types for 'LEDdisplay'; have 'void()'
  537 | void LEDdisplay() {
      |      ^~~~~~~~~~
../Core/Src/main.c:111:3: note: previous implicit declaration of 'LEDdisplay' with type 'void()'
  111 |   LEDdisplay()
      |   ^~~~~~~~~~
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j16 all" terminated with exit code 2. Build might be incomplete.

02:52:01 Build Failed. 2 errors, 6 warnings. (took 405ms)

